# Robo-Burnie

./: .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  constants.py  crontab.example  post_game_thread.py  pyproject.toml  requirements.txt  run  run.sh  settings.py  setup-pi.sh  standings.py
.github/workflows/: azure-static-web-apps-calm-flower-0d713ab10.yml
example_api_responses/: scoreboardv2.json
scripts/: around_the_league_thread.py  game_thread.py  helpers.py  post_game_thread.py  schedule.py  standings.py  update_old_reddit.py
scripts/around_the_league/: create_thread.py
src/robo_burnie/: _constants.py  _file_lock.py  _helpers.py  _settings.py  config.json  default_config.json  helpers.py  settings.py
src/robo_burnie/scripts/: _helpers.py  around_the_league_thread.py  check_commands.py  game_thread.py  post_game_thread.py  post_game_thread_cmd_listener.py  reset_config.py  schedule_sidebar.py  standings_sidebar.py  update_old_reddit.py
tests/: config.py  test_helpers.py
tests/nba_api_responses/: leaguestandings.json
tests/scripts/: test_around_the_league_thread.py  test_check_commands.py  test_game_thread.py  test_post_game_thread.py  test_reset_config.py  test_schedule_sidebar.py  test_standings_sidebar.py  test_update_old_reddit.py
tests/test_data/espn_api/: scoreboard.json
