[tool.poetry]
name = "robo_burnie"
version = "0.1.0"
description = "A bot for the subreddit r/heat"
authors = ["Anthony Delprete <adelprete87@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.13"
requests = "^2.32.3"
praw = "^7.8.1"
nba_api = "^1.6.1"
dateutils = "^0.6.12"
google-api-python-client = "^2.184"
google-auth-oauthlib = "^1.2.0"
numpy = "^2.1"
setuptools = "^80.9.0"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
